[package]
name = "send_marking_iclock"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["clock"] }
futures = "0.3"
chrono-tz = "0.6"
serde_json = "1.0"
dotenv = "0.15.0"
csv = "1.3"
base64 = "0.21"
aes = "0.7"
block-modes = "0.8"
block-padding = "0.2"